<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_values_neurology"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.diogocapela.docty.ValuesNeurologyActivity"
    android:background="@color/master_bg_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Intracranial pressure (ICP) SEM MARGIN TOP -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/list_padding_sides"
                android:paddingRight="@dimen/list_padding_sides"
                android:paddingBottom="@dimen/list_padding_topbottom"
                android:paddingTop="@dimen/list_padding_topbottom"
                android:background="@color/list_bg_1"
                android:layout_marginBottom="@dimen/list_margin_topbottom"
                android:layout_marginLeft="@dimen/list_margin_sides"
                android:layout_marginRight="@dimen/list_margin_sides">
                <TextView
                    android:id="@+id/neurology_icp_title"
                    android:text="@string/neurology_icp_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textSize="@dimen/title_font_size"
                    android:textColor="@color/title_color" />
                <TextView
                    android:id="@+id/neurology_icp_display"
                    android:text="@string/neurology_icp"
                    android:layout_below="@+id/neurology_icp_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/display_font_size"
                    android:textColor="@color/display_color" />
                <TextView
                    android:id="@+id/neurology_icp_unit"
                    android:text="@string/neurology_icp_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/listPreferredItemHeight"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:textSize="@dimen/unit_font_size"
                    android:textColor="@color/unit_color"
                    android:gravity="bottom" />
            </RelativeLayout>
            <!-- End -->

            <!-- Cerebral perfusion pressure (CPP) SEM MARGIN BOTTOM-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/list_padding_sides"
                android:paddingRight="@dimen/list_padding_sides"
                android:paddingBottom="@dimen/list_padding_topbottom"
                android:paddingTop="@dimen/list_padding_topbottom"
                android:background="@color/list_bg_1"
                android:layout_marginTop="@dimen/list_margin_topbottom"
                android:layout_marginLeft="@dimen/list_margin_sides"
                android:layout_marginRight="@dimen/list_margin_sides">
                <TextView
                    android:id="@+id/neurology_cpp_title"
                    android:text="@string/neurology_cpp_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textSize="@dimen/title_font_size"
                    android:textColor="@color/title_color" />
                <TextView
                    android:id="@+id/neurology_cpp_display"
                    android:text="@string/neurology_cpp"
                    android:layout_below="@+id/neurology_cpp_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/display_font_size"
                    android:textColor="@color/display_color" />
                <TextView
                    android:id="@+id/neurology_cpp_unit"
                    android:text="@string/neurology_cpp_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/listPreferredItemHeight"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:textSize="@dimen/unit_font_size"
                    android:textColor="@color/unit_color"
                    android:gravity="bottom" />
            </RelativeLayout>
            <!-- End -->


        </LinearLayout>
    </ScrollView>

</LinearLayout>
